fixes alignment of image in mobile

--- a/game_1630/app/static/app/style.css
+++ b/game_1630/app/static/app/style.css
@@ -658,7 +658,10 @@ section.Screenshots, section.artworks {
 		width: 100% !important;
 	}
 	.story.order .col-md-6:first-child {
-		order: 1;
+		order: 0;
+	}
+	.story.order-two .col-md-6:first-child {
+		order: 2;
 	}
 	.story .col-md-6 img {
 		width: 100%;
